Date	Added
11/28
	* Fixed online system for char not sending players left "online" to login when restarting [Wizputer]
	* Fixed damage formula of Cart revolution: 150% +1% per 80ea [Lupus]
	* Removed 2x Chance of Equipment Breaking during CRITICAL attacks [Lupus]
	* Fix some file props [MouseJstr]
	* Added map_versionscreen(), displayed when --version flag is passed on command-line. [MC Cameri]
	* Finished map_helpscreen(), displayed when --help flag passed on command-line. [MC Cameri]
	* Changed Guilds Extention Skill to +6 people per level. [Lupus]
	  (tested it for 2 weeks! or a big server)
	* Added a fix for gettimeofday() for WIN32 [Codemaster]
        * skill Updates:
          - Updated Slow Poison, modified checks for skill_unit_onplace abit. [celest]
          - Updated Finger Offensive, thanks to orn  [celest]
        * Updated packet_ver_flag's default value, thanks to iscandium  [celest]
        * Added warning if motd.txt was not found  [celest]
          (Turn on error_log in battle_athena.conf to enable it)

11/27
	* Fixed a few map crashes when char-server crashes [Wizputer]
	* Added fix of 0x2aff and 0x2af8 flooding [Wizputer - thanks Toster] 
	* Fixed Map crash when person uses global message hacks [Wizputer]
	* Fixed online system, online column works and prevent double login at the login server [Wizputer]
	* Fixed some compile time errors associated with showmsg [MouseJstr]
	* Added get_svn_revision() in core.c [MC Cameri]
	  -Only if you have the file .svn\entries, it will show the revision # at runtime.

11/26   
	* Fixed Abrakadabra (2 minor bugs of consumed items - they were ignored if placed in 0 pos) [Lupus]
        * Finished Full Strip, Weapon Refine, Slim Pitcher and Full Protection. [celest]
        * Added skill_nocast_db.txt. Use it to set which skills cannot be used in
          which conditions [celest]

11/25
	* Added @skilltree to help GM's answer skill tree questions [MouseJstr]